--- a/issuetracker.mvc/Views/Issues/Issue.cshtml
+++ b/issuetracker.mvc/Views/Issues/Issue.cshtml
@@ -40,10 +40,10 @@
 		</div>
 	</div>
 
-	<div class="row">
+	<div class="row px-3">
 		<div class="col-md-8">
 
-			<div class="container-fluid">
+			<div class="container-fluid px-0">
 				<div class="row">
 					<div class="col-3 text-success">
 						<h6>
@@ -80,7 +80,7 @@
 				</div>
 			</div>
 
-			<div class="container-fluid mt-4">
+			<div class="container-fluid mt-4 px-0">
 				<div class="row">
 					<div class="col-3 text-success">
 						<h6>Created on</h6>
@@ -96,7 +96,7 @@
 			</div>
 
 
-			<div class="container-fluid mt-5">
+			<div class="container-fluid mt-5 px-0">
 				<div class="row">
 					<div class="col text-success">
 						<h6>Description</h6>
@@ -108,7 +108,7 @@
 			</div>
 
 
-			<div class="container-fluid mt-4">
+			<div class="container-fluid mt-4 px-0">
 				<div class="row mb-4">
 					<div class="col text-success">
 						<h6>Tags</h6>
@@ -137,7 +137,7 @@
 
 			@if (Model.ResolutionSummary != null)
 			{
-				<div class="container-fluid mt-4">
+				<div class="container-fluid mt-4 px-0">
 					<div class="row">
 						<div class="col text-success">
 							Resolution summary
