--- a/issuetracker.mvc/Views/Projects/Index.cshtml
+++ b/issuetracker.mvc/Views/Projects/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container-fluid my-3">
-	<div class="row me-2">
+	<div class="row me-md-2">
 		<div class="col text-end">
 			<a asp-action="create" asp-controller="projects" class="btn btn-primary">
 				Create Project
@@ -20,7 +20,7 @@
 		}
 		else
 		{
-			<div class="col-md-8 ms-md-5 gap-5">
+			<div class="col-md-8 ms-md-5 gap-5 container-fluid px-md-0 px-4">
 				<div class="row py-3">
 					<div class="col-3 fw-bold">Name</div>
 					<div class="col-3 fw-bold">Start Date</div>
