--- a/issuetracker.mvc/Views/Issues/Issue.cshtml
+++ b/issuetracker.mvc/Views/Issues/Issue.cshtml
@@ -3,14 +3,14 @@
 	ViewData["Title"] = $"{Model.Title}";
 }
 
-<div class="container-fluid my-3">
-	<div class="row me-2">
-		<div class="col-8">
+<div class="container-fluid my-3 ps-md-4">
+	<div class="row me-md-2 mb-5 mb-md-0">
+		<div class="col-md-8">
 			<h3 class="text-capitalize text-danger">@Model.Title Issue</h3>
 			<p>Project : @Model.ProjectName</p>
 		</div>
-		<div class="col-4 position-relative">
-			<div class="d-flex gap-1 justify-content-end">
+		<div class="col-md-4 position-relative">
+			<div class="d-flex gap-1 justify-content-end me-md-0 me-2">
 				@if (Model.Status == "Open")
 				{
 					<a asp-action="closeIssue" asp-controller="issues" asp-route-id="@Model.IssueId"
@@ -40,7 +40,7 @@
 		</div>
 	</div>
 
-	<div class="row px-3">
+	<div class="row px-md-3 px-2">
 		<div class="col-md-8">
 
 			<div class="container-fluid px-0">
@@ -58,7 +58,7 @@
 					<div class="col-2 text-success">
 						<h6>Status</h6>
 					</div>
-					<div class="col-2 text-success">
+					<div class="col-md-2 col-3 text-success">
 						<h6>Priority</h6>
 					</div>
 				</div>
@@ -71,7 +71,7 @@
 							@Model.Status
 						</p>
 					</div>
-					<div class="col-2">
+					<div class="col-md-2 col-3">
 						<p class="px-2 py-0 rounded my-0 text-lowercase boxshadow"
 							style="width: fit-content; background-color: @Model.Priority.Color;">
 							@Model.Priority.Name
@@ -139,7 +139,7 @@
 			{
 				<div class="container-fluid mt-4 px-0">
 					<div class="row">
-						<div class="col text-success">
+						<div class="col text-success px-0">
 							Resolution summary
 						</div>
 					</div>
@@ -155,7 +155,7 @@
 
 
 		@* users *@
-		<div class="col-md-4 ms-auto">
+		<div class="col-md-4 ms-auto mt-4 mt-md-0">
 			<div class="container-fluid px-0">
 
 				<div class="row">
@@ -177,7 +177,7 @@
 					}
 					else
 					{
-						<div class="col">
+						<div class="col px-4 px-md-0 pe-md-4">
 
 							<partial name="_AssignedToUsers" model="@Model.AssignedTo" />
 						</div>
