--- a/issuetracker.mvc/Views/Projects/Project.cshtml
+++ b/issuetracker.mvc/Views/Projects/Project.cshtml
@@ -3,15 +3,15 @@
 	ViewData["Title"] = Model.Name;
 }
 
-<div class="container-fluid my-3">
+<div class="container-fluid my-3 ps-md-4">
 
-	<div class="row me-2 mb-5">
-		<div class="col-8">
+	<div class="row me-md-2 mb-5">
+		<div class="col-md-8">
 			<h4 class="text-dark text-uppercase" style="letter-spacing: 2px;">
 				@Model.Name
 			</h4>
 		</div>
-		<div class="col-4 position-relative d-flex gap-1 justify-content-end">
+		<div class="col-md-4 position-relative d-flex gap-1 justify-content-end">
 			<a asp-action="Edit" asp-controller="projects" asp-route-id="@Model.Id" class="btn btn-outline-primary">Edit</a>
 
 
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 
-	<div class="row px-3 my-4">
+	<div class="row px-md-3 px-2 my-4">
 
 		<div class="col-md-8">
 
@@ -95,7 +95,7 @@
 			</div>
 
 
-			<div class="container-fluid px-0 pe-4 my-5 py-4">
+			<div class="container-fluid px-md-0 px-2 pe-md-4 my-5 py-4">
 				<div class="row">
 					<div class="col">
 						<h6 class="text-danger fw-bold">
@@ -125,7 +125,7 @@
 
 
 
-			<div class="container-fluid px-0 pe-4 my-5 py-4">
+			<div class="container-fluid px-md-0 px-2 pe-md-4 my-5 py-4">
 				<div class="row">
 					<div class="col">
 						<h6 class="text-warning fw-bold">
@@ -153,7 +153,7 @@
 
 
 
-			<div class="container-fluid px-0 pe-4 my-5 py-4">
+			<div class="container-fluid px-md-0 px-2 pe-md-4 my-5 py-4">
 				<div class="row">
 					<div class="col">
 						<h6 class="text-primary fw-bold">
@@ -178,7 +178,7 @@
 			</div>
 
 
-			<div class="container-fluid px-0 pe-4 my-5 py-4">
+			<div class="container-fluid px-md-0 px-2 pe-md-4 my-5 py-4">
 				<div class="row">
 					<div class="col">
 						<h6 class="text-success fw-bold">
@@ -232,7 +232,7 @@
 					}
 					else
 					{
-						<div class="col">
+						<div class="col px-4 px-md-0 pe-md-4">
 							<partial name="_AssignedToUsers" model="@Model.AssignedTo" />
 						</div>
 					}
