--- a/issuetracker.mvc/wwwroot/css/site.css
+++ b/issuetracker.mvc/wwwroot/css/site.css
@@ -18,14 +18,14 @@ body {
 }
 
 .sidenav {
-  min-height: 90vh;
+  height: 100%;
   width: 250px;
   overflow: hidden;
   display: none;
 }
 
 #sidenvContainer {
-  padding: 0 1rem;
+  padding: 0 0.5rem;
 }
 
 #sidebar_toggle_btn {
