--- a/issuetracker.mvc/Views/Adminstration/ListRoles.cshtml
+++ b/issuetracker.mvc/Views/Adminstration/ListRoles.cshtml
@@ -30,7 +30,7 @@
 			</div>
 
 
-			<div class="row gap-4 mx-auto">
+			<div class="row gap-4 justify-content-center">
 				@foreach (var role in Model)
 				{
 					<div class="col-md-5">
