--- a/issuetracker.mvc/Views/Home/Index.cshtml
+++ b/issuetracker.mvc/Views/Home/Index.cshtml
@@ -1,7 +1,34 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model DashboardViewModel
+@{
+    ViewData["Title"] = "Dashboard";
 }
 
-<div class="text-center">
-    <h1>Dashboard</h1>
+<div class="container-fluid my-3 px-4">
+    <div class="row justify-content-between">
+        <div class="col-md-6">
+            <h5 class="text-danger">Overdue Issues</h5>
+            <partial name="_Issues" model="@Model.OverDueIssues" />
+        </div>
+        <div class="col-md-5">
+            <h5 class="text-warning">Recently opened issues</h5>
+            <partial name="_Issues" model="@Model.RecentlyOpenedIssues" />
+        </div>
+    </div>
+
+    <div class="row mt-5 justify-content-between">
+        <div class="col-md-6">
+            <h5 class="text-danger">
+                Un Assigned Issues
+            </h5>
+            <partial name="_Issues" model="@Model.UnAssignedIssues" />
+        </div>
+
+        <div class="col-md-5">
+            <h5 class="text-success">
+                Closed Issues
+            </h5>
+            <partial name="_Issues" model="@Model.ClosedIssues" />
+        </div>
+
+    </div>
 </div>
