--- a/issuetracker.mvc/Views/Home/Index.cshtml
+++ b/issuetracker.mvc/Views/Home/Index.cshtml
@@ -4,14 +4,87 @@
 }
 
 <div class="container-fluid my-3 px-4">
+    <div class="row mb-5 gap-5">
+        @foreach (var project in Model.Projects)
+        {
+            if (project.AllIssues > 0)
+            {
+                <div class="col-md-5 p-4 border boxshadow rounded-3">
+                    <h6>Project : @project.ProjectName
+                    </h6>
+                    <div class="container-fluid px-0 mt-3">
+                        <div class="row">
+                            <div class="col-6 fw-bold">Target End Date</div>
+                            <div class="col-6 fw-bold">Actual End Date</div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6">@project.TargetEndDate.ToShortDateString()</div>
+                            <div class="col-6">@project.ActaulEndDate.ToShortDateString()</div>
+                        </div>
+                    </div>
+                    <div class="mt-4">
+                        <div class="d-flex justify-content-between flex-wrap gap-4">
+                            <div class="d-flex align-items-center flex-column">
+                                <div class="rounded-circle boxshadow bg-danger d-flex align-items-center justify-content-center mb-3"
+                            style="width: 75px;height: 75px;">
+                                    <h6>@project.OverdueIssues / @project.AllIssues</h6>
+                                </div>
+                                <h6>Over Due</h6>
+                            </div>
+
+                            <div class="d-flex align-items-center flex-column">
+                                <div class="rounded-circle boxshadow bg-warning d-flex align-items-center justify-content-center mb-3"
+                            style="width: 75px;height: 75px;">
+                                    <h6>@project.UnAssignedIssues / @project.AllIssues</h6>
+                                </div>
+                                <h6>Un Assigned</h6>
+                            </div>
+
+
+                            <div class="d-flex align-items-center flex-column">
+                                <div class="rounded-circle boxshadow bg-info d-flex align-items-center justify-content-center mb-3"
+                            style="width: 75px;height: 75px;">
+                                    <h6>@project.OpenIssues / @project.AllIssues</h6>
+                                </div>
+                                <h6>Open</h6>
+                            </div>
+
+
+                            <div class="d-flex align-items-center flex-column">
+                                <div class="rounded-circle boxshadow bg-success d-flex align-items-center justify-content-center mb-3"
+                            style="width: 75px;height: 75px;">
+                                    <h6>@project.ClosedIssues / @project.AllIssues</h6>
+                                </div>
+                                <h6>Closed</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        }
+    </div>
     <div class="row justify-content-between">
         <div class="col-md-6">
             <h5 class="text-danger">Overdue Issues</h5>
-            <partial name="_Issues" model="@Model.OverDueIssues" />
+            @if (Model.OverDueIssues.Count() == 0)
+            {
+                <h6>No over due issues</h6>
+            }
+            else
+            {
+                <partial name="_Issues" model="@Model.OverDueIssues" />
+            }
         </div>
         <div class="col-md-5">
             <h5 class="text-warning">Recently opened issues</h5>
-            <partial name="_Issues" model="@Model.RecentlyOpenedIssues" />
+            @if (Model.RecentlyOpenedIssues.Count() == 0)
+            {
+                <h6>No Recent issues</h6>
+            }
+            else
+            {
+                <partial name="_Issues" model="@Model.RecentlyOpenedIssues" />
+            }
         </div>
     </div>
 
@@ -20,14 +93,14 @@
             <h5 class="text-danger">
                 Un Assigned Issues
             </h5>
-            <partial name="_Issues" model="@Model.UnAssignedIssues" />
-        </div>
-
-        <div class="col-md-5">
-            <h5 class="text-success">
-                Closed Issues
-            </h5>
-            <partial name="_Issues" model="@Model.ClosedIssues" />
+            @if (Model.UnAssignedIssues.Count() == 0)
+            {
+                <h6>No Un Assigned issues</h6>
+            }
+            else
+            {
+                <partial name="_Issues" model="@Model.UnAssignedIssues" />
+            }
         </div>
 
     </div>
