--- a/issuetracker.mvc/wwwroot/css/site.css
+++ b/issuetracker.mvc/wwwroot/css/site.css
@@ -64,3 +64,23 @@ body {
 .boxshadow {
   box-shadow: 0px 2px 4px 0px rgb(0 0 0 / 30%), 0px 2px 6px 2px rgb(0 0 0 / 15%);
 }
+
+#CommentsDiv {
+  max-height: 80vh;
+  overflow-y: scroll;
+}
+
+#CommentsDiv::-webkit-scrollbar {
+  width: 5px;
+}
+
+#CommentsDiv::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(200, 200, 200, 1);
+  border-radius: 10px;
+}
+
+#CommentsDiv::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #fff;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.7);
+}
