--- a/issuetracker.mvc/Views/Home/Index.cshtml
+++ b/issuetracker.mvc/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
             if (project.AllIssues > 0)
             {
                 <div class="col-md-5 p-4 border boxshadow rounded-3">
-                    <h6>Project : @project.ProjectName
-                    </h6>
+                    <h5 class="text-primary">Project : @project.ProjectName
+                    </h5>
                     <div class="container-fluid px-0 mt-3">
                         <div class="row">
                             <div class="col-6 fw-bold">Target End Date</div>
@@ -25,7 +25,7 @@
                     <div class="mt-4">
                         <div class="d-flex justify-content-between flex-wrap gap-4">
                             <div class="d-flex align-items-center flex-column">
-                                <div class="rounded-circle boxshadow bg-danger d-flex align-items-center justify-content-center mb-3"
+                                <div class="rounded-3 bg-danger d-flex align-items-center justify-content-center mb-3"
                             style="width: 75px;height: 75px;">
                                     <h6>@project.OverdueIssues / @project.AllIssues</h6>
                                 </div>
@@ -33,7 +33,7 @@
                             </div>
 
                             <div class="d-flex align-items-center flex-column">
-                                <div class="rounded-circle boxshadow bg-warning d-flex align-items-center justify-content-center mb-3"
+                                <div class="rounded-3 bg-warning d-flex align-items-center justify-content-center mb-3"
                             style="width: 75px;height: 75px;">
                                     <h6>@project.UnAssignedIssues / @project.AllIssues</h6>
                                 </div>
@@ -42,7 +42,7 @@
 
 
                             <div class="d-flex align-items-center flex-column">
-                                <div class="rounded-circle boxshadow bg-info d-flex align-items-center justify-content-center mb-3"
+                                <div class="rounded-3 bg-info d-flex align-items-center justify-content-center mb-3"
                             style="width: 75px;height: 75px;">
                                     <h6>@project.OpenIssues / @project.AllIssues</h6>
                                 </div>
@@ -51,7 +51,7 @@
 
 
                             <div class="d-flex align-items-center flex-column">
-                                <div class="rounded-circle boxshadow bg-success d-flex align-items-center justify-content-center mb-3"
+                                <div class="rounded-3 bg-success d-flex align-items-center justify-content-center mb-3"
                             style="width: 75px;height: 75px;">
                                     <h6>@project.ClosedIssues / @project.AllIssues</h6>
                                 </div>
