--- a/issuetracker.mvc/Views/Home/Index.cshtml
+++ b/issuetracker.mvc/Views/Home/Index.cshtml
@@ -10,8 +10,12 @@
             if (project.AllIssues > 0)
             {
                 <div class="col-md-5 p-4 border boxshadow rounded-3">
-                    <h5 class="text-primary">Project : @project.ProjectName
-                    </h5>
+                    <a asp-action="project" asp-controller="projects" asp-route-id="@project.Slug"
+                class="text-decoration-none text-primary">
+                        <h5 class="border-bottom border-2 border-primary py-1" style="width: fit-content;">Project :
+                            @project.ProjectName
+                        </h5>
+                    </a>
                     <div class="container-fluid px-0 mt-3">
                         <div class="row">
                             <div class="col-6 fw-bold">Target End Date</div>
