add sound element

--- a/issuetracker.mvc/Views/Issues/Comments.cshtml
+++ b/issuetracker.mvc/Views/Issues/Comments.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="container-fluid my-3 px-4">
+	<audio src="/beep.mp3" id="audio"></audio>
 	<div class="row justify-content-center">
 
 		<div class="col-12">
