--- a/issuetracker.mvc/Views/Shared/_Navbar.cshtml
+++ b/issuetracker.mvc/Views/Shared/_Navbar.cshtml
@@ -15,10 +15,21 @@
 			<i class="bi bi-list h4"></i>
 		</button>
 
-		<a class="text-dark text-decoration-none h4 mb-1 fw-normal" asp-area="" asp-controller="Home" asp-action="Index">
-			<i class="bi bi-bug-fill"></i>
-			IssueTracker
-		</a>
+		@if (User.IsInRole("manager"))
+		{
+			<a class="text-dark text-decoration-none h4 mb-1 fw-normal" asp-area="" asp-controller="Home" asp-action="Index">
+				<i class="bi bi-bug-fill"></i>
+				IssueTracker
+			</a>
+		}
+		else
+		{
+			<a class="text-dark text-decoration-none h4 mb-1 fw-normal" asp-area="" asp-controller="issues"
+			asp-action="assignedtome">
+				<i class="bi bi-bug-fill"></i>
+				IssueTracker
+			</a>
+		}
 
 		<div class="ms-auto d-flex align-items-center">
 			@if (signInManager.IsSignedIn(User))
