--- a/issuetracker.mvc/Views/Issues/Issue.cshtml
+++ b/issuetracker.mvc/Views/Issues/Issue.cshtml
@@ -22,22 +22,27 @@
 				{
 					<button disabled class="btn btn-success">Closed</button>
 				}
-				<a asp-action="Edit" asp-controller="issues" asp-route-id="@Model.IssueId"
+				@if (User.IsInRole("manager") || User.IsInRole("lead"))
+				{
+					<a asp-action="Edit" asp-controller="issues" asp-route-id="@Model.IssueId"
 					class="btn btn-outline-primary">Edit</a>
+				}
 
 
+				@if (User.IsInRole("manager"))
+				{
+					<form asp-action="deleteissue" asp-controller="issues" asp-route-id="@Model.IssueId" method="post" class="">
+						<a onclick="confirmDeleteIssue()" class="btn btn-danger">Delete</a>
 
-				<form asp-action="deleteissue" asp-controller="issues" asp-route-id="@Model.IssueId" method="post" class="">
-					<a onclick="confirmDeleteIssue()" class="btn btn-danger">Delete</a>
-
-					<div id="confirmDeleteIssueBox" class="gap-2 text-center bg-white boxshadow border p-2 rounded-3"
+						<div id="confirmDeleteIssueBox" class="gap-2 text-center bg-white boxshadow border p-2 rounded-3"
 						style="position: absolute; bottom: -20px; right: 0px; display: none;">
-						<p class="m-2">Are you sure you want to delete this issue?</p>
-						<button type="submit" class="btn btn-outline-danger btn-sm px-3">Yes</button>
-						<a class="btn btn-primary btn-sm px-3" onclick="cancelDeleteIssue()">No</a>
-					</div>
+							<p class="m-2">Are you sure you want to delete this issue?</p>
+							<button type="submit" class="btn btn-outline-danger btn-sm px-3">Yes</button>
+							<a class="btn btn-primary btn-sm px-3" onclick="cancelDeleteIssue()">No</a>
+						</div>
 
-				</form>
+					</form>
+				}
 			</div>
 		</div>
 	</div>
@@ -105,7 +110,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col">@Model.Description</div>
+					<div class="col-md-10">@Model.Description</div>
 				</div>
 			</div>
 
@@ -186,12 +191,15 @@
 					}
 				</div>
 
-				<div class="row mt-3">
-					<div class="col px-0">
-						<a asp-action="editusersinissue" asp-controller="issues" asp-route-issueId="@Model.IssueId"
+				@if (User.IsInRole("manager") || User.IsInRole("lead"))
+				{
+					<div class="row mt-3">
+						<div class="col px-0">
+							<a asp-action="editusersinissue" asp-controller="issues" asp-route-issueId="@Model.IssueId"
 							class="btn btn-dark btn-sm">Add or Remove users</a>
+						</div>
 					</div>
-				</div>
+				}
 
 
 			</div>
